--- a/style.css
+++ b/style.css
@@ -40,7 +40,6 @@ a:link, a:visited, a:hover, a:active {
 	height: 100%;
 	top:0;
 	left:0;
-	transition: all 0.3s;
 }
 
 .hidden {
@@ -463,3 +462,37 @@ select {
 	/* text-align: center; */
 	vertical-align: middle;
 }
+
+/* ポップアップウィンドウ設定用 ここから */
+.video_wrapper_popup {
+	width: 100%;
+	height: 100%;
+	transition: all 0.3s;
+}
+
+
+.control_form_text {
+	grid-template-columns: 2.5em 4em 1fr;
+}
+
+.control_form_text .control_label {
+	grid-column: 1 / 2;
+    line-height: 230%;
+    text-align: right;
+}
+
+.control_form_text .control_input {
+	grid-column: 2 / 3;
+}
+
+.control_form_text .control_value {
+	line-height: 230%;
+}
+
+.control_form_text p{
+	grid-column: 3 / 4;
+	display: block;
+	margin: 0;
+	padding: 0;
+}
+/* ポップアップウィンドウ設定用 ここまで */
