--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ a:link, a:visited, a:hover, a:active {
 	position: absolute;
 	bottom: -0.5rem;
 	left: 0;
-	padding: 0.5rem;
+	/* padding: 0.5rem; */
 	font-family: 'Noto Sans JP', sans-serif;
 	font-size: 68px;
 	font-weight: 500;
@@ -134,8 +134,10 @@ a:link, a:visited, a:hover, a:active {
 	text-shadow:0 0 5px #000;
 	-webkit-text-stroke-width: 0.3px;
 	-webkit-text-stroke-color: #000;
+	/*
 	text-align: justify;
-     word-wrap: break-word;
+	*/
+    word-wrap: break-word;
 	opacity: 0.9;
 }
 
