--- a/style.css
+++ b/style.css
@@ -124,21 +124,21 @@ a:link, a:visited, a:hover, a:active {
 	position: absolute;
 	bottom: -0.5rem;
 	left: 0;
-	/* padding: 0.5rem; */
+	padding: 0.5rem;
 	font-family: 'Noto Sans JP', sans-serif;
 	font-size: 68px;
 	font-weight: 500;
 	letter-spacing: 0.05em;
 	line-height: 163%;
 	color: #fff;
+  word-wrap: break-word;
+	opacity: 0.9;
+	/*
 	text-shadow:0 0 5px #000;
+	text-align: justify;
 	-webkit-text-stroke-width: 0.3px;
 	-webkit-text-stroke-color: #000;
-	/*
-	text-align: justify;
 	*/
-    word-wrap: break-word;
-	opacity: 0.9;
 }
 
 .text_overlay_wrapper.split .text_area{
